# sel4-trace-support

./: CMakeLists.txt  README.md
sel4-extract/: CMakeLists.txt  sel4-extract.c
sel4-ftrace-merge/: CMakeLists.txt  ftrace-merge.c
sel4-ftrace-merge/include/: ftrace.h
